--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.9.0a6-alpine3.11
 
 RUN apk update && apk upgrade
 
-RUN python -3 -m pip install -U discord.py
+RUN python -m pip install -U discord.py
 RUN pip install Matplotlib Numpy Numpy-stl imageio
 
 RUN apk add git 
