--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,9 +4,10 @@ RUN apk update && apk upgrade
 RUN apk add git 
 
 #RUN python -m pip install -U discord.py
-RUN pip3 install Matplotlib Numpy Numpy-stl imageio discord.py
+RUN pip install Matplotlib Numpy Numpy-stl imageio discord.py
 
 
 RUN git clone https://github.com/hannesknutsson/3D-STL-Boii.git
 
+WORKDIR /3D-STL-Boii
 ENTRYPOINT ["python", "3D-STL-Boii.py"]
